[FIX] deviation tooltip position, since table filters have higher z-index

--- a/src/assets/scss/wrappers/holding-tooltips.scss
+++ b/src/assets/scss/wrappers/holding-tooltips.scss
@@ -47,10 +47,10 @@
 
   .tooltip {
     right: 0;
-    top: -30px;
+    top: -23px;
 
     .corner {
-      bottom: -8px;
+      bottom: -7px;
       right: 25px;
     }
   }
